0.1-3	(under development)
   o	switch the order of winsock2.h and windows.h

0.1-2	2013-02-19
   o	fix missing UNPROTECT() when using non-character columns in
	RC.write.table()

0.1-1	2012-11-05
   o	RC.get() now performs get_slice with a list of columns

   o	fix a bug in RC.write.table (thanks to Pierre-Alexandre des
	Mazis for reporting)

   o	fix WSAStartup version request (Windows only)


0.1-0	2012-05-05
   o	initial CRAN release